--- a/VideoGameStore/appsettings.json
+++ b/VideoGameStore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=VideoGameStoreDb;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=sqlserver,1433;Database=GameStore;User Id=sa;Password=Password1234@!;TrustServerCertificate=True;"
   }
 }
