add createdAt filed to game and order

--- a/VideoGameStore/appsettings.json
+++ b/VideoGameStore/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver,1433;Database=GameStore;User Id=sa;Password=Password1234@!;TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=sqlserver,1433;Database=VideoGameStoreDb;User Id=sa;Password=Password1234@!;TrustServerCertificate=True;",
+        "LocalConnection": "Server=localhost;Database=VideoGameStoreDb;Integrated Security=True;TrustServerCertificate=True;"
+    }
 }
