--- a/VideoGameStore/appsettings.json
+++ b/VideoGameStore/appsettings.json
@@ -1,13 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=sqlserver,1433;Database=VideoGameStoreDb;User Id=sa;Password=Password1234@!;TrustServerCertificate=True;",
         "LocalConnection": "Server=localhost;Database=VideoGameStoreDb;Integrated Security=True;TrustServerCertificate=True;"
+    },
+    "Minio": {
+        "Endpoint": "localhost:9000",
+        "AccessKey": "minioadmin",
+        "SecretKey": "minioadmin",
+        "WithSSL": false
     }
+
 }
