--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,25 @@ services:
       ]
       interval: 10s
       timeout: 5s
+      retries: 10
+      start_period: 30s
+
+  minio:
+    image: minio/minio:RELEASE.2023-01-31T02-24-19Z
+    container_name: gamestore-minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ':9001'
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 10s
+      timeout: 5s
       retries: 5
       start_period: 10s
 
@@ -28,13 +47,20 @@ services:
     ports:
       - "8080:80"
     environment:
-      ConnectionStrings__DefaultConnection: "Server=sqlserver,1433;Database=VideoGameStoreDb;User Id=sa;Password=Password1234@!;TrustServerCertificate=True;"
+      ConnectionStrings__DefaultConnection: "Server=sqlserver,1433;Database=VideoGameStoreDb;User Id=sa;Password=Password1234@!;TrustServerCertificate=True;Connection Timeout=30;"
+      MinIO__Endpoint: "minio:9000"
+      MinIO__AccessKey: "minioadmin"
+      MinIO__SecretKey: "minioadmin"
+      MinIO__BucketName: "games-files"
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: "http://+:80"
     depends_on:
       sqlserver:
         condition: service_healthy
-    restart: unless-stopped
+      minio:
+        condition: service_healthy
+    restart: on-failure
 
 volumes:
   sqlserver_data:
+  minio_data:
